--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,15 @@ p {
 /*222a59*/
 #top-bar {
 	background: #0f1426;
-	height:100px;
+	/*height:50px;*/
 	/*float:left;*/
 	width:100%;
 	/*box-shadow: 0 2px 6px rgba(0,0,0,0.2);*/
 }
 .container {
-	padding: 10%;
+	padding-left: 15%;
+	padding-right: 15%;
+	padding-top: 5%;
 	/*padding-left: 50px;*/
 	/*position:relative;*/
 }
