--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,7 @@ a:hover {
 
 h1, h2, h3, h4, h5 {
 	color: #3ba8ad;
+	font-weight: 400;
 }
 h5 {
 	font-size: 1.5em;
@@ -201,6 +202,7 @@ h5 {
 
 #about p {
 	text-size: 1.5em;
+	color: #fff;
 }
 
 .github img{
@@ -208,4 +210,9 @@ h5 {
 	/*-webkit-filter: grayscale(100%);*/
 	/*filter: grayscale(100%);*/
 	background-color: #fff;
+}
+
+#contact p{
+	font-size: 1.5em;
+	line-height: 1em;
 }
