messed with font and colors

--- a/assets/css/star.css
+++ b/assets/css/star.css
@@ -33,7 +33,7 @@
 	content: "";
 	width: 24px;
 	height: 24px;
-	background: #12172d;
+	background: #040509;
 	border-radius: 20%;
 	position: absolute;
 }
